# FreeRDP

./: .artifactignore  .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .travis.yml  BuildFreeRDPx64.bat  BuildFreeRDPx86.bat  BuildOpenSSLx64.bat  BuildOpenSSLx86.bat  CMakeCPack.cmake  CMakeCPackOptions.cmake.in  CMakeLists.txt  CMakePresets.json  ChangeLog  Dockerfile  FRRDP  FreeRDPConfig.cmake.in  PUBLIC_API.txt  README  README.md  Rdp  SECURITY.md  Slaw  Using your self-hosted runner  build.sh  buildflags.h.in  config.h.in  credentials.txt  dbg.txt  example.py  freerdp-3.4.0.zip.sha512  freerdp-3.9.0.zip.md5  freerdp.pc  freerdp.pc.in  freerdp.spec  lwd.h  main.yml  ngrok.yml  (+5 more)
channels/: CMakeLists.txt
client/: .gitignore  CMakeLists.txt  FreeRDP-ClientConfig.cmake.in  freerdp-client.pc.in
cunit/: CMakeLists.txt  test_ber.c  test_ber.h  test_bitmap.c  test_bitmap.h  test_chanman.c  test_chanman.h  test_channels.c  test_channels.h  test_cliprdr.c  test_cliprdr.h  test_color.c  test_color.h  test_drdynvc.c  test_drdynvc.h  test_freerdp.c  test_freerdp.h  test_gcc.c  test_gcc.h  test_gdi.c  test_gdi.h  test_libgdi.c  test_libgdi.h  test_librfx.c  test_librfx.h  test_license.c  test_license.h  test_list.c  test_list.h  test_mcs.c  test_mcs.h  test_mppc.c  test_mppc.h  test_mppc_enc.c  test_mppc_enc.h  test_network.c  test_nsc.c  test_nsc.h  test_ntlm.c  test_ntlm.h  (+20 more)
dotnet/: CMakeLists.txt  DevolutionsRdp.c  DevolutionsRdp.h  DevolutionsRdp.rc  clipboard.c  clipboard.h  cursor.c  cursor.h  headless.c
include/: CMakeLists.txt
keymaps/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  aliases  amiga  ataritt  empty  evdev  fujitsu  hp  ibm  macintosh  macosx  sony  sun  xfree86  xfree98  xkb.pl
libfreerdp/: CMakeLists.txt  FreeRDPConfig.cmake.in  dummy.c  freerdp.pc.in
libfreerdp-asn1/: BIT_STRING.c  BIT_STRING.h  CMakeLists.txt  ContextFlags.c  ContextFlags.h  GeneralString.c  GeneralString.h  INTEGER.c  INTEGER.h  MechType.c  MechType.h  MechTypeList.c  MechTypeList.h  NativeEnumerated.c  NativeEnumerated.h  NativeInteger.c  NativeInteger.h  NegHints.c  NegHints.h  NegTokenInit.c  NegTokenInit.h  NegTokenInit2.c  NegTokenInit2.h  NegTokenResp.c  NegTokenResp.h  NegoData.c  NegoData.h  NegoDataItem.c  NegoDataItem.h  NegotiationToken.c  NegotiationToken.h  OBJECT_IDENTIFIER.c  OBJECT_IDENTIFIER.h  OCTET_STRING.c  OCTET_STRING.h  TSCredentials.c  TSCredentials.h  TSCspDataDetail.c  TSCspDataDetail.h  TSPasswordCreds.c  (+52 more)
libfreerdp-channels/: CMakeLists.txt  libchannels.c  libchannels.h  wtsvc.c  wtsvc.h
libfreerdp-codec/: CMakeLists.txt  bitmap.c  color.c  jpeg.c  mppc_dec.c  mppc_enc.c  nsc.c  nsc_encode.c  nsc_encode.h  nsc_sse2.c  nsc_sse2.h  nsc_types.h  rfx.c  rfx_bitstream.h  rfx_constants.h  rfx_decode.c  rfx_decode.h  rfx_differential.c  rfx_differential.h  rfx_dwt.c  rfx_dwt.h  rfx_encode.c  rfx_encode.h  rfx_neon.c  rfx_neon.h  rfx_pool.c  rfx_pool.h  rfx_quantization.c  rfx_quantization.h  rfx_rlgr.c  rfx_rlgr.h  rfx_sse2.c  rfx_sse2.h  rfx_types.h
libfreerdp-core/: CMakeLists.txt  activation.c  activation.h  ber.c  ber.h  bitmap.c  bitmap.h  bitmap_inc.c  capabilities.c  capabilities.h  certificate.c  certificate.h  channel.c  channel.h  connection.c  connection.h  credssp.c  credssp.h  crypto.c  crypto.h  errinfo.c  errinfo.h  extension.c  extension.h  fastpath.c  fastpath.h  freerdp.c  gcc.c  gcc.h  graphics.c  http.c  http.h  info.c  info.h  input.c  input.h  license.c  license.h  listener.c  listener.h  (+58 more)
libfreerdp-crypto/: CMakeLists.txt  ber.c  certificate.c  crypto.c  der.c  er.c  nla.c  per.c  tls.c
libfreerdp-gdi/: 16bpp.c  32bpp.c  8bpp.c  CMakeLists.txt  bitmap.c  brush.c  clipping.c  color.c  dc.c  decode.c  decode.h  drawing.c  gdi.c  gdi.h  gdi_16bpp.c  gdi_16bpp.h  gdi_32bpp.c  gdi_32bpp.h  gdi_8bpp.c  gdi_8bpp.h  gdi_bitmap.c  gdi_bitmap.h  gdi_brush.c  gdi_brush.h  gdi_clipping.c  gdi_clipping.h  gdi_dc.c  gdi_dc.h  gdi_drawing.c  gdi_drawing.h  gdi_line.c  gdi_line.h  gdi_palette.c  gdi_palette.h  gdi_pen.c  gdi_pen.h  gdi_region.c  gdi_region.h  gdi_shape.c  gdi_shape.h  (+7 more)
libfreerdp-kbd/: CMakeLists.txt  keyboard.h  layout_ids.c  layout_ids.h  layouts.c  layouts_xkb.c  layouts_xkb.h  libkbd.c  libkbd.h  locales.c  locales.h  x_layout_id_table.c  x_layout_id_table.h
libfreerdp-locale/: CMakeLists.txt  keyboard.c  keyboard.h  keyboard_keymap.c  keyboard_keymap.h  keyboard_layout.c  keyboard_sun.c  keyboard_sun.h  keyboard_x11.c  keyboard_x11.h  keyboard_xkb.c  keyboard_xkb.h  keyboard_xkbfile.c  keyboard_xkbfile.h  layouts.c  layouts_xkb.c  libkbd.c  liblocale.h  locale.c  locales.c  timezone.c  virtual_key_codes.c  x_layout_id_table.c  x_layout_id_table.h  xkb_layout_ids.c  xkb_layout_ids.h
libfreerdp-nsc/: CMakeLists.txt  libnsc.c
libfreerdp-rfx/: CMakeLists.txt  librfx.c  rfx_bitstream.c  rfx_bitstream.h  rfx_constants.h  rfx_decode.c  rfx_decode.h  rfx_differential.h  rfx_dwt.c  rfx_dwt.h  rfx_encode.c  rfx_encode.h  rfx_pool.h  rfx_quantization.c  rfx_quantization.h  rfx_rlgr.c  rfx_rlgr.h  rfx_types.h
libfreerdp-sspi/: CMakeLists.txt  credssp.c  sspi.c  sspi.h
libfreerdp-utils/: CMakeLists.txt  args.c  bitmap.c  blob.c  cerstore.c  certstore.c  datablob.c  dsp.c  event.c  file.c  hexdump.c  list.c  load_plugin.c  memory.c  msusb.c  mutex.c  passphrase.c  pcap.c  profiler.c  rail.c  readpassphrase.c  rect.c  registry.c  semaphore.c  signal.c  sleep.c  stopwatch.c  stream.c  string.c  svc_plugin.c  tcp.c  thread.c  time.c  uds.c  unicode.c  wait_obj.c
libwinpr-rpc/: CMakeLists.txt  ndr.c  ndr_array.c  ndr_array.h  ndr_context.h  ndr_correlation.c  ndr_pointer.c  ndr_pointer.h  ndr_simple.h  ndr_structure.c  ndr_union.c  rpc.c
libwinpr-sspi/: CMakeLists.txt  credssp.c  sspi.c  sspi.h
rdtk/: CMakeLists.txt  RdTkConfig.cmake.in  rdtk.pc.in
server/: .gitignore  CMakeLists.txt  FreeRDP-ServerConfig.cmake.in  freerdp-server.pc.in
uwac/: CMakeLists.txt  uwac.pc.in  uwacVersion.cmake
winpr/: .gitignore  CMakeLists.txt  WinPRConfig.cmake.in  buildflags.h.in  config.h.in  winpr.pc.in  wlog.1  (+1 more)
(+4626 files in other folders)
